--- a/src/main/resources/templates/cadastrarLivro.html
+++ b/src/main/resources/templates/cadastrarLivro.html
@@ -59,6 +59,7 @@
                                         th:field="*{isbn}"
                                         class="form-control"
                                         id="isbn"
+                                        name="isbn"
                                         placeholder="isbn"
                                     >
                                     <span
@@ -81,6 +82,7 @@
                                         th:field="*{autor}"
                                         class="form-control"
                                         id="autor"
+                                        name="autor"
                                         placeholder="Autor"
                                     >
                                     <span
@@ -103,6 +105,7 @@
                                         th:field="*{titulo}"
                                         class="form-control"
                                         id="titulo"
+                                        name="titulo"
                                         placeholder="Titulo"
                                     >
                                     <span
@@ -116,6 +119,7 @@
                                         type="submit"
                                         class="btn btn-primary"
                                         value="Cadastrar Livro"
+                                        id="submitButton"
                                     >
                                     <a
                                         type="submit"
